# Stat-Tracker-for-IT-Council-2.0

./: main.py  pyproject.toml
.github/workflows/: ios-build.yml
